# funcs_web

./: .gitignore  README.md  pyproject.toml  setup.py
backend/: main.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: func.py  scan.py
backend/core/: CMakeLists.txt  bind_core.cpp  common.h  func.py  func_core.cpp  func_core.h  port_scanner.cpp  port_scanner.py
backend/schemas/: func.py  scan.py
backend/services/: func_service.py  scan_service.py
backend/src/: funcs.cpp  funcs.h  libcore.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css  netTools.css
frontend/src/components/common/: FeatureCard.vue
frontend/src/components/layout/: AdSidebar.vue  AppLayout.vue  Hello.vue  TheFooter.vue  TheHeader.vue  TherFooter.vue
frontend/src/router/: features.ts  index.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue
frontend/src/views/categories/NetTools/: DNSLookup.vue  PortScanner.vue  WhoIs.vue
